--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: FPGAwork
-description: Alla about FPGA and Wireless Communication
+description: All about FPGA and Wireless Communication
